load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("//:version.bzl", "VERSION")
load("@bazel_skylib//rules:copy_file.bzl", "copy_file")

package(default_visibility = ["//visibility:public"])

# gazelle:prefix github.com/kindlyops/vbs
# gazelle:exclude dummy.go
gazelle(
    name = "gazelle",
    external = "vendored",
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/kindlyops/vbs",
    visibility = ["//visibility:private"],
    deps = ["//cmd:go_default_library"],
)

go_binary(
    name = "vbs-linux",
    embed = [":go_default_library"],
    goarch = "amd64",
    goos = "linux",
    visibility = ["//visibility:public"],
    x_defs = {
        "version": VERSION,
    },
)

go_binary(
    name = "vbs-linux-arm",
    embed = [":go_default_library"],
    goarch = "arm64",
    goos = "linux",
    visibility = ["//visibility:public"],
    x_defs = {
        "version": VERSION,
    },
)

go_binary(
    name = "vbs-darwin",
    embed = [":go_default_library"],
    goarch = "amd64",
    goos = "darwin",
    visibility = ["//visibility:public"],
    x_defs = {
        "version": VERSION,
    },
)

go_binary(
    name = "vbs-darwin-m1",
    embed = [":go_default_library"],
    goarch = "arm64",
    goos = "darwin",
    visibility = ["//visibility:public"],
    x_defs = {
        "version": VERSION,
    },
)

go_binary(
    name = "vbs-windows",
    embed = [":go_default_library"],
    goarch = "amd64",
    goos = "windows",
    visibility = ["//visibility:public"],
    x_defs = {
        "version": VERSION,
    },
)

alias(
    name = "vbs",
    actual = select({
        "@io_bazel_rules_go//go/platform:linux_amd64": ":vbs-linux",
        "@io_bazel_rules_go//go/platform:linux_arm64": ":vbs-linux-arm",
        "@io_bazel_rules_go//go/platform:darwin_amd64": ":vbs-darwin",
        "@io_bazel_rules_go//go/platform:darwin_arm64": ":vbs-darwin-m1",
        "@io_bazel_rules_go//go/platform:windows_amd64": ":vbs-windows",
        "//conditions:default": ":vbs-linux",
    }),
)

copy_file(
    name = "install-darwin",
    src = "//:vbs-darwin",
    out = "bdist/vbs_darwin_amd64/vbs",
)

copy_file(
    name = "install-darwin-m1",
    src = "//:vbs-darwin-m1",
    out = "bdist/vbs_darwin_arm64/vbs",
)

copy_file(
    name = "install-linux",
    src = "//:vbs-linux",
    out = "bdist/vbs_linux_amd64/vbs",
)

copy_file(
    name = "install-linux-arm",
    src = "//:vbs-linux-arm",
    out = "bdist/vbs_linux_arm64/vbs",
)

copy_file(
    name = "install-windows",
    src = "//:vbs-windows",
    out = "bdist/vbs_windows_amd64/vbs.exe",
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["main_test.go"],
    args = ["-cli"] + select({
        "@io_bazel_rules_go//go/platform:linux_amd64": [
            "$(location :vbs-linux)",
        ],
        "@io_bazel_rules_go//go/platform:linux_arm64": [
            "$(location :vbs-linux-arm)",
        ],
        "@io_bazel_rules_go//go/platform:darwin_amd64": [
            "$(location :vbs-darwin)",
        ],
        "@io_bazel_rules_go//go/platform:darwin_arm64": [
            "$(location :vbs-darwin-m1)",
        ],
        "@io_bazel_rules_go//go/platform:windows_amd64": [
            "$(location :vbs-windows)",
        ],
        "//conditions:default": [],
    }),
    data = select({
        "@io_bazel_rules_go//go/platform:linux_amd64": [
            ":vbs-linux",
        ],
        "@io_bazel_rules_go//go/platform:linux_arm64": [
            ":vbs-linux-arm",
        ],
        "@io_bazel_rules_go//go/platform:darwin_amd64": [
            ":vbs-darwin",
        ],
        "@io_bazel_rules_go//go/platform:darwin_arm64": [
            ":vbs-darwin-m1",
        ],
        "@io_bazel_rules_go//go/platform:windows_amd64": [
            ":vbs-windows",
        ],
        "//conditions:default": [],
    }),
    rundir = ".",
    deps = ["//vendor/github.com/bazelbuild/rules_go/go/tools/bazel"],
)

sh_binary(
    name = "vendor",
    srcs = ["vendor.sh"],
    args = [
        "$(location @bazel_gazelle//cmd/gazelle)",
    ],
    data = [
        "@bazel_gazelle//cmd/gazelle",
        "@go_sdk//:files",
    ],
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "lint",
    srcs = ["lint.sh"],
    args = [
        "$(location @bazel_gazelle//cmd/gazelle)",
    ],
    data = [
        "@bazel_gazelle//cmd/gazelle",
        "@go_sdk//:files",
    ],
    tags = ["manual"],
    visibility = ["//visibility:public"],
)
