load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "chapters.go",
        "ivs.go",
        "lighting.go",
        "root.go",
    ],
    importpath = "github.com/kindlyops/vbs/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/aws/aws-sdk-go/aws:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/aws/session:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/service/ivs:go_default_library",
        "//vendor/github.com/hypebeast/go-osc/osc:go_default_library",
        "//vendor/github.com/kennygrant/sanitize:go_default_library",
        "//vendor/github.com/mattn/go-isatty:go_default_library",
        "//vendor/github.com/mitchellh/go-homedir:go_default_library",
        "//vendor/github.com/rs/zerolog:go_default_library",
        "//vendor/github.com/rs/zerolog/log:go_default_library",
        "//vendor/github.com/spf13/cobra:go_default_library",
        "//vendor/github.com/spf13/viper:go_default_library",
        "//embeddy:go_default_library",
    ],
)
