load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "chapters.go",
        "fly.go",
        "ivs.go",
        "lighting.go",
        "play.go",
        "play_unix.go",
        "play_windows.go",
        "root.go",
    ],
    importpath = "github.com/kindlyops/vbs/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//embeddy:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/aws:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/aws/session:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/service/ivs:go_default_library",
        "//vendor/github.com/charmbracelet/bubbles/help:go_default_library",
        "//vendor/github.com/charmbracelet/bubbles/key:go_default_library",
        "//vendor/github.com/charmbracelet/bubbles/progress:go_default_library",
        "//vendor/github.com/charmbracelet/bubbles/spinner:go_default_library",
        "//vendor/github.com/charmbracelet/bubbletea:go_default_library",
        "//vendor/github.com/charmbracelet/lipgloss:go_default_library",
        "//vendor/github.com/hypebeast/go-osc/osc:go_default_library",
        "//vendor/github.com/kennygrant/sanitize:go_default_library",
        "//vendor/github.com/labstack/echo/v5:go_default_library",
        "//vendor/github.com/mattn/go-isatty:go_default_library",
        "//vendor/github.com/muesli/coral:go_default_library",
        "//vendor/github.com/pocketbase/pocketbase:go_default_library",
        "//vendor/github.com/pocketbase/pocketbase/apis:go_default_library",
        "//vendor/github.com/pocketbase/pocketbase/core:go_default_library",
        "//vendor/github.com/pocketbase/pocketbase/plugins/migratecmd:go_default_library",
        "//vendor/github.com/rs/zerolog:go_default_library",
        "//vendor/github.com/rs/zerolog/log:go_default_library",
        "//vendor/github.com/spf13/viper:go_default_library",
    ] + select({
        "@io_bazel_rules_go//go/platform:windows": [
            "//vendor/github.com/Microsoft/go-winio:go_default_library",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "go_default_test",
    srcs = [
        "chapters_test.go",
        "lighting_test.go",
        "root_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//vendor/github.com/rs/zerolog:go_default_library",
        "//vendor/github.com/spf13/viper:go_default_library",
    ],
)
