load("@io_bazel_rules_go//go:def.bzl", "go_library")

# keep
go_library(
    name = "go_default_library",
    srcs = ["embedder.go"],
    embedsrcs = glob([
        "public/**/*",
    ]),
    importpath = "github.com/kindlyops/vbs/embeddy",
    visibility = ["//visibility:public"],
    deps = [],
)
